# r9p

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  flake.nix  justfile
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: export_descriptor.rs  format.rs  main.rs  target.rs  transport.rs
crates/cli/src/commands/: git_export.rs  machine.rs  mod.rs  mount.rs  mutate.rs  read_write.rs  script.rs  serve.rs
crates/cli/tests/: cli_machine.rs  fuse_mount.rs
crates/core/: Cargo.toml
crates/core/src/: blocking.rs  codec.rs  export_descriptor.rs  lib.rs  qid.rs  srv_publish.rs
crates/core/src/multiplex/: client.rs  mod.rs  reader.rs  util.rs
crates/core/src/server/: config.rs  handlers.rs  validation.rs
crates/core/tests/: memory_tree.rs
crates/front/: Cargo.toml
crates/front/bindings/deno/: front_sink.ts
crates/front/demo/: front_host.ts
crates/front/include/: r9p_front.h
crates/front/src/: abi.rs  lib.rs  serve.rs
crates/front/src/abi/: client.rs  mod.rs  publication.rs
crates/front/tests/: conformance.rs
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs  mounted.rs
crates/fuse/: Cargo.toml
crates/fuse/src/: diagnostics.rs  error.rs  lib.rs  node.rs  p9.rs
crates/fuse/src/fuse/: change_feed.rs  dispatch.rs  invalidation.rs  mod.rs  mount.rs  reply.rs  status.rs  util.rs  wire.rs
crates/fuse/src/fuse/ops/: attrs.rs  create.rs  dir.rs  io.rs  locks.rs  lookup.rs  misc.rs  mod.rs  mutate.rs  namespace_change.rs
crates/fuse/src/fuse/ops/io/: mod.rs  open.rs  read.rs  write.rs
crates/fuse/src/node/: handles.rs
crates/r9p-cli/: Cargo.toml
crates/r9p-cli/src/: errors.rs  format.rs  io.rs  target.rs  transport.rs
crates/r9p-cli/src/commands/: read_write.rs  version_attach.rs
crates/r9p/src/: client.rs  error.rs  flush.rs  lib.rs
crates/r9p/src/multiplex/: client.rs
crates/r9p/src/server/: handlers.rs  session.rs  stream.rs  types.rs
crates/r9p/tests/: memory_tree.rs
docs/: architecture.md  source-map.md
docs/handoff/: codex.md
notes/source-reading/: 2026-05-12-plan9port-9p-client-shape.md  2026-05-13-r9p-cli-plan9port-parity.md  2026-05-13-remove-clunks-fid.md  2026-05-13-split-server-completion.md  2026-05-14-go9p-fs-comparison.md  2026-05-15-machine-session-script.md  2026-05-15-machine-streaming-read-write.md  2026-05-21-fuse-interrupt-invalidation.md  2026-05-24-fuse-notification-reply-lock.md  2026-05-29-fuse-read-handle-replay.md  README.md
refs/: 9pfuse  README.md  knusbaum-go9p  lib9p  lionkov-go9p  plan9port  plan9port-vault  r9pfuse  racme  vault
src/: blocking.rs  client.rs  codec.rs  fid.rs  lib.rs  message.rs  multiplex.rs  qid.rs  server.rs  stat.rs
src/multiplex/: client.rs  mod.rs
src/server/: config.rs  handlers.rs  mod.rs  session.rs  types.rs
tests/: cli_machine.rs
