[workspace]
members = [
    "crates/r9p",
    "crates/r9p-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
repository = "https://github.com/MrVampy/r9p"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.dependencies]
r9p = { path = "crates/r9p" }
