[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/fs",
    "crates/fuse",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
repository = "https://github.com/MrVampy/r9p"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.dependencies]
fuse = { path = "crates/fuse" }
fs = { path = "crates/fs" }
libc = "=0.2.186"
r9p = { path = "crates/core" }
