[package]
name = "fuse"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
description = "Linux FUSE bridge for mounting 9P namespaces through the r9p suite"
repository = "https://github.com/MrVampy/r9p"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[dependencies]
libc.workspace = true
r9p.workspace = true
